recommendation/java/quarkus-api/src/main/deployments/ocp.jvm/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: recommendation-svc
  name: recommendation-svc
spec:
  ports:
  - port: 8080
    #nodePort: 30202
    protocol: TCP
    targetPort: 8080
  selector:
    app: recommendation
    version: v2
  type: ClusterIP
status:
  loadBalancer: {}
