recommendation/java/quarkus-api/src/main/deployments/ocp.jvm/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-svc
  labels:
    app: recommendation-svc    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: recommendation
