recommendation/java/quarkus-api/src/main/deployments/ocp.jvm/04.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: recommendation-v2-route
  name: recommendation-v2-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: recommendation-svc
    weight: 100
  wildcardPolicy: None
