recommendation/java/quarkus-api/src/main/deployments/ocp.jvm/05.Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: recommendation-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-gateway
spec:
  hosts:
  - "*"
  gateways:
  - recommendation-gateway
  http:
  - match:
    - uri:
        prefix: /recommendation
    rewrite:
      uri: /todos
    route:
    - destination:
        host: recommendation-svc
        port:
          number: 8080
